# xterm-query

./: Cargo.toml  README.md
examples/kitty/: main.rs
src/: error.rs  lib.rs  win.rs
