[package]
name = "xterm-query"
version = "0.3.0"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/xterm-query"
description = "query your terminal"
keywords = ["terminal", "xterm", "query", "unix"]
license = "MIT"
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["poll"] }

[dev-dependencies]
crossterm = "0.21"
