[package]
name = "xterm-query"
version = "0.5.2"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/xterm-query"
description = "query your terminal"
keywords = ["terminal", "xterm", "query", "unix", "windows"]
license = "MIT"
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["poll"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
crossterm = "0.21"
